<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login">
    <TextView
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="55dp"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/black"
        android:textSize="30dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/LoginTextInputLayoutStyle"
        app:startIconDrawable="@drawable/u_mail"
        android:layout_below="@+id/textView2"
        android:hint="@string/e_mail_address"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:id="@+id/password"
        app:startIconDrawable="@drawable/u_lock"
        app:endIconMode="password_toggle"
        android:layout_below="@+id/email"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
        />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:textStyle="bold"
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="49dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:onClick="onClickForgotPassword"
        android:textSize="20dp" />

    <Button
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/forgot_password"
        android:layout_marginHorizontal="@dimen/side"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/Base_color"
        android:onClick="onClickSignIn"
        android:text="@string/sign_in" />


</RelativeLayout>