<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.HomeActivity">

    <TextView
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="43dp"
        android:text="@string/welcome_home"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/start_activity_read"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/imageView3"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/Base_color"
        android:onClick="onCLickNextStep"
        android:text="@string/get_started_scan"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <Button
        android:id="@+id/setting"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/start_activity_read"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="37dp"
        android:onClick="onCLickSetting"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:strokeColor="@color/Base_color" />

    <ImageView

        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        app:srcCompat="@drawable/scan_icon" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="298dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/a"
    />

</RelativeLayout>