<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="@string/sign_in"
    tools:context=".Login_or_register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="46dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/u_mail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginStart="-7dp"
        android:layout_marginTop="25dp"
        android:text="@string/control_your_choices"
        android:textColor="@color/black"
        android:textSize="40dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/u_mail" />

    <Button
        android:id="@+id/create_new_account"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:backgroundTint="@color/Base_color"
        android:onClick="create_new_account"
        android:text="@string/create_new_account" />

    <TextView
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_new_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="sign_in"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="16dp" />

</RelativeLayout>